# xla-artifacts

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  pjrt_plugin.def  pjrt_plugin_exported_symbols.txt  pjrt_plugin_version_script.lds  rift_pjrt_sys.def  rift_pjrt_sys_exported_symbols.txt  ryft_xla_sys.def  ryft_xla_sys_exported_symbols.txt  ryft_xla_sys_version_script.lds
.github/workflows/: build.yaml
bazel/: archive.bzl
patches/: 0001-nvptx-compiler.patch  0001-register-pjrt-ffi-handler.patch  0002-bazel-rc.patch  0002-bazel.patch  0003-nvptx-compiler.patch  rules_ml_toolchain.patch  xla.patch
src/c++/: common.h  distributed.cc  distributed.h
